[gd_scene load_steps=19 format=3 uid="uid://cj5wdypv6bgty"]

[ext_resource type="Script" path="res://Stages/Space/space.gd" id="1_vwde2"]
[ext_resource type="MeshLibrary" uid="uid://d0dhtk4l6m82q" path="res://addons/testing_object_bk/mesh_library_one_cube.tres" id="1_ws17c"]
[ext_resource type="PackedScene" uid="uid://cjn1o8ydxd63j" path="res://Stages/Space/parallax_effect.tscn" id="2_nqetn"]
[ext_resource type="Texture2D" uid="uid://d18nx2ym63ivv" path="res://Stages/Space/Skymaps/Stars.png" id="3_b5q1y"]
[ext_resource type="PackedScene" uid="uid://dslka5hon8bfc" path="res://Entity/DataServer/server.tscn" id="3_ige54"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_8sgsg"]
panorama = ExtResource("3_b5q1y")

[sub_resource type="Sky" id="Sky_mgfau"]
sky_material = SubResource("PanoramaSkyMaterial_8sgsg")

[sub_resource type="Environment" id="Environment_whijo"]
background_mode = 2
sky = SubResource("Sky_mgfau")

[sub_resource type="Animation" id="Animation_vpptg"]
length = 10.0
loop_mode = 1
step = 0.25

[sub_resource type="Animation" id="Animation_fqthd"]
resource_name = "Space_living"
length = 10.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WorldEnvironment:environment:background_energy_multiplier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5, 7.5, 10),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2),
"update": 0,
"values": [1.0, 1.25, 1.15, 1.25, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7nsvj"]
_data = {
"RESET": SubResource("Animation_vpptg"),
"Space_living": SubResource("Animation_fqthd")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o1ugs"]
bg_color = Color(0.16, 0.16, 0.16, 0.25098)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.16, 0.16, 0.16, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hu804"]
bg_color = Color(0.26, 0.26, 0.26, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tv0d4"]
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m5juq"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 350
border_width_top = 250
border_width_right = 350
border_width_bottom = 250
border_color = Color(0, 0, 0, 0.12549)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ngfua"]
bg_color = Color(0.16, 0.16, 0.16, 0.501961)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.16, 0.16, 0.16, 0.768627)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_hf5lh"]
properties/0/path = NodePath(".:time")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:state")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:player_names")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="SphereShape3D" id="SphereShape3D_deoej"]
radius = 300.0

[node name="Space" type="Node3D"]
script = ExtResource("1_vwde2")

[node name="ParallaxEffect" parent="." instance=ExtResource("2_nqetn")]
transform = Transform3D(400, 0, 0, 0, 400, 0, 0, 0, 400, 0, 0, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.154401, -0.365171, 0.918047, -0.000751569, 0.929146, 0.369713, -0.988008, -0.0577738, 0.143186, 0, 0, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_whijo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7nsvj")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 786.0
offset_top = 396.0
offset_right = -784.0
offset_bottom = -395.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_o1ugs")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/VBoxContainer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Main Menu"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="CanvasLayer/VBoxContainer/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Host"

[node name="IsOnlineCheckBox" type="CheckBox" parent="CanvasLayer/VBoxContainer/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 32
text = "Online Mode"

[node name="JoinButton" type="Button" parent="CanvasLayer/VBoxContainer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Join"

[node name="AddressLine" type="LineEdit" parent="CanvasLayer/VBoxContainer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "Address"
alignment = 1
max_length = 16

[node name="Warning" type="PanelContainer" parent="CanvasLayer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o1ugs")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/VBoxContainer/Warning"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/Warning/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="HUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
offset_right = 20.0
offset_bottom = 23.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Score" type="Label" parent="CanvasLayer/HUD/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "HostErr"

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_bottom = 33.0
grow_horizontal = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Time" type="Label" parent="CanvasLayer/HUD/MarginContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Timezone Sync"
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="HBoxContainer" parent="CanvasLayer/HUD/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DroneName" type="Label" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "EscToExit"
horizontal_alignment = 2

[node name="EnergyBar" type="ProgressBar" parent="CanvasLayer/HUD/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_hu804")
theme_override_styles/fill = SubResource("StyleBoxFlat_tv0d4")
step = 1.0
show_percentage = false

[node name="Vignete" type="PanelContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m5juq")

[node name="EndScreen" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 760.0
offset_top = 415.0
offset_right = -758.0
offset_bottom = -413.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ngfua")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/EndScreen"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/EndScreen/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15
alignment = 1

[node name="MatchResults" type="Label" parent="CanvasLayer/EndScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Data Collection Results"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/EndScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Names" type="VBoxContainer" parent="CanvasLayer/EndScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="WonPlayer" type="Label" parent="CanvasLayer/EndScreen/MarginContainer/VBoxContainer/HBoxContainer/Names"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "name"
horizontal_alignment = 2

[node name="LostPlayer" type="Label" parent="CanvasLayer/EndScreen/MarginContainer/VBoxContainer/HBoxContainer/Names"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "name"
horizontal_alignment = 2

[node name="Separators" type="VBoxContainer" parent="CanvasLayer/EndScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Separator" type="Label" parent="CanvasLayer/EndScreen/MarginContainer/VBoxContainer/HBoxContainer/Separators"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = ":"

[node name="Separator2" type="Label" parent="CanvasLayer/EndScreen/MarginContainer/VBoxContainer/HBoxContainer/Separators"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = ":"
horizontal_alignment = 1

[node name="Scores" type="VBoxContainer" parent="CanvasLayer/EndScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="WonPlayerScore" type="Label" parent="CanvasLayer/EndScreen/MarginContainer/VBoxContainer/HBoxContainer/Scores"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "000000"
horizontal_alignment = 2

[node name="LostPlayerScore" type="Label" parent="CanvasLayer/EndScreen/MarginContainer/VBoxContainer/HBoxContainer/Scores"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "000000"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/EndScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="MainMenu" type="Button" parent="CanvasLayer/EndScreen/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Main menu"

[node name="QuitGame" type="Button" parent="CanvasLayer/EndScreen/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit Game"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Entity/Player/player.tscn")
spawn_path = NodePath("..")

[node name="GridMap" type="GridMap" parent="." groups=["static_object"]]
mesh_library = ExtResource("1_ws17c")
cell_size = Vector3(4, 4, 4)
cell_center_y = false
cell_scale = 4.0

[node name="Server1" parent="." instance=ExtResource("3_ige54")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -96, 0, -96)

[node name="Server2" parent="." instance=ExtResource("3_ige54")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 128, 0, 0)

[node name="Server3" parent="." instance=ExtResource("3_ige54")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -96, 0, 96)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_hf5lh")

[node name="SecondTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true
autostart = true

[node name="WorldBorder" type="Area3D" parent="." groups=["world_border"]]
collision_layer = 0
collision_mask = 2

[node name="WorldBorderCollision" type="CollisionShape3D" parent="WorldBorder" groups=["world_border"]]
shape = SubResource("SphereShape3D_deoej")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.641371, -0.0654427, -0.764435, 0.0337799, 0.997798, -0.057079, 0.766487, 0.0107863, 0.642169, 193.906, 79.0389, -123.838)

[connection signal="pressed" from="CanvasLayer/VBoxContainer/MainMenu/MarginContainer/VBoxContainer/HBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CanvasLayer/EndScreen/MarginContainer/VBoxContainer/HBoxContainer2/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/EndScreen/MarginContainer/VBoxContainer/HBoxContainer2/QuitGame" to="." method="_on_quit_game_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
[connection signal="timeout" from="SecondTimer" to="." method="_on_second_timer_timeout"]
